--- a/css/i-style.css
+++ b/css/i-style.css
@@ -29,16 +29,16 @@ h3{
   padding: 20px 0;
   text-align: center;
   position: relative;
-  height: 400px; /* Adjust height as needed */
-  overflow: hidden; /* Ensure no overflow */
+  height: 400px;
+  overflow: hidden;
 }
 
 .header-image {
-  width: 100%; /* Make the image span the full width of the header */
-  height: 100%; /* Make the image span the full height of the header */
-  object-fit: contain; /* Contain the image within the header */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   z-index: 0;
-  opacity: 0.8; /* Adjust opacity as needed */
+  opacity: 0.8;
   position: absolute;
   top: 0;
   left: 0;
@@ -68,15 +68,7 @@ section p {
       text-indent: 20px;
       padding: .2px;
 }
-
-/* Background Image with Opacity */
-body {
-  background-image: url('./img/bgsalmon.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-/* 
+/*  - Color Pallets -
 #ED6A5E - Deep Salmon
 #FF8E72 - Mid Salmon
 #FFAF87 - light Salmon
