--- a/css/s-style.css
+++ b/css/s-style.css
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: '';
-  background: url('./img/bg-salmon.png') no-repeat center center fixed;
+  background: url('../img/bg-salmon.png') no-repeat center center fixed;
   background-size: cover;
   position: fixed;
   top: 0;
@@ -15,9 +15,8 @@ body::before {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.5; 
+  opacity: 0.5;
 }
-
 .header {
   background-color: #FF8E72; 
   padding: 20px 0;
