--- a/css/sg-styles.css
+++ b/css/sg-styles.css
@@ -7,7 +7,7 @@ body {
   
   body::before {
     content: '';
-    background: url('./img/bg-salmon.png') no-repeat center center fixed;
+    background: url('../img/bg-salmon.png') no-repeat center center fixed;
     background-size: cover;
     position: fixed;
     top: 0;
@@ -15,7 +15,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    opacity: 0.5; 
+    opacity: 0.5;
   }
   
   .header {
